2010-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-archive-directory): Removed.
	(gnus-group-recent-archive-directory): Ditto.
	(gnus-group-make-archive-group): Removed.

	* nnimap.el (nnimap-update-info): Protect against nil uidnexts.

	* gnus-cache.el (gnus-cache-braid-heads): When braiding heads, don't
	use the same article number for all the cached articles.

	* nnimap.el (nnimap-command): Register the last command time so
	that we can use it for idling NOOPs.
	(nnimap-open-connection): Start the keeplive timer.
	(nnimap-make-process-buffer): Store all the process buffers.
	(nnimap-keepalive): New function.

	* starttls.el: (starttls-open-stream): Add autoload cookie.

2010-09-24  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* nnimap.el (nnimap-split-incoming-mail): Fix paren typo in the 'junk
	handling.

2010-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnrss.el (nnrss-retrieve-groups): Change to the group before checking
	its data structures.

	* gnus.el (gnus-sloppily-equal-method-parameters): Use copy-sequence
	instead of the cl.el copy-list.
	(gnus-sloppily-equal-method-parameters): Use equal instead of the cl
	equalp.

2010-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-tool-bar-from-list): Always use tool-bar-local-item
	and tool-bar-local-item-from-menu.

	* gnus-agent.el (gnus-agent-make-mode-line-string): Always use
	mode-line-highlight face for Emacs.

	* gnus-art.el (toplevel): Don't bind recursive-load-depth-limit while
	loading gnus-sum.elc; fix comment for canlock-verify.
	(gnus-article-jump-to-part): Use read-number.
	(gnus-insert-mime-button, gnus-insert-mime-security-button): Remove
	Emacs pre-21 compatible code for help-echo.
	(gnus-article-next-page-1): No need to adjust the number of lines.
	(gnus-article-describe-bindings): Always use help-buffer.

	* gnus-audio.el (gnus-audio-inline-sound)
	* gnus-cus.el (gnus-custom-mode)